--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -71,6 +71,10 @@
   --ifm-footer-padding-vertical: 1rem;
 }
 
+a:has(.footer-logo-license) {
+  opacity: 0.9;
+}
+
 footer {
   border-top: 1px solid var(--bc-gray-50);
 }
