Add territorial acknowledgement to homepage
There are some challenges for customizing the global footer via swizzling.
However, we can at least insert in the land acknowledgement in the
homepage to at least attempt to meet footer best practices on the landing.

Signed-off-by: Jeremy Ho <jujaga@gmail.com>

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -73,6 +73,14 @@
   --ifm-table-cell-padding: 0.6rem;
 }
 
+.acknowledgement {
+  background-color: var(--bc-gray-100);
+  border-top: 0.25rem solid var(--bc-primary-gold);
+  border-bottom: 0.25rem solid var(--bc-primary-gold);
+  color: var(--bc-gray-white);
+  padding: 2rem;
+}
+
 a:has(.footer-logo-license) {
   opacity: 0.9;
 }
