--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -63,10 +63,10 @@
   --ifm-color-primary-lighter: var(--bc-blue-50);
   --ifm-color-primary-lightest: var(--bc-blue-40);
   --ifm-color-primary: var(--bc-blue-70);
-  --ifm-font-family-base: BC Sans, system-ui, -apple-system, Segoe UI, Roboto,
-    Ubuntu, Cantarell, Noto Sans, sans-serif, BlinkMacSystemFont, 'Segoe UI',
-    Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-    'Segoe UI Symbol';
+  --ifm-font-family-base:
+    BC Sans, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell,
+    Noto Sans, sans-serif, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial,
+    sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   --ifm-footer-background-color: var(--bc-primary-invert);
   --ifm-footer-padding-vertical: 1rem;
   --ifm-line-height-base: 1.5;
